--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,25 @@
 asn1crypto==1.2.0
 base58==0.2.5
 bitcash==0.5.2.9
+bleach==3.1.0
 cashaddress==1.0.4
 certifi==2019.9.11
 cffi==1.13.2
 chardet==3.0.4
 coincurve==13.0.0
+docutils==0.15.2
 idna==2.8
+pkginfo==1.5.0.1
 pycparser==2.19
+Pygments==2.4.2
+python-engineio==3.10.0
+python-socketio==4.3.1
+readme-renderer==24.0
 requests==2.22.0
+requests-toolbelt==0.9.1
+six==1.13.0
+tqdm==4.38.0
+twine==2.0.0
 urllib3==1.25.7
+webencodings==0.5.1
+websocket-client==0.56.0
