--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ requests = "*"
 cashaddress = "*"
 bitcash = "*"
 python-socketio = {extras = ["client"],version = "*"}
+pywallet = "*"
 
 [requires]
 python_version = "3.6"
