--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+arrow==0.15.4
 asn1crypto==1.2.0
+atomicwrites==1.3.0
+attrs==19.3.0
 base58==0.2.5
 bitcash==0.5.2.9
 bleach==3.1.0
@@ -6,20 +9,57 @@ cashaddress==1.0.4
 certifi==2019.9.11
 cffi==1.13.2
 chardet==3.0.4
+click==6.6
 coincurve==13.0.0
+docker-py==1.8.0
 docutils==0.15.2
+ecdsa==0.14.1
+entrypoints==0.3
+flake8==3.7.9
+funcsigs==1.0.2
+future==0.18.2
 idna==2.8
+importlib-metadata==0.23
+jsonrpcclient==2.0.1
+jsonrpcserver==3.1.1
+jsonschema==3.2.0
+mccabe==0.6.1
+mnemonic==0.13
+more-itertools==7.2.0
+packaging==19.2
+path.py==12.0.2
+pbkdf2==1.3
+pexpect==4.7.0
 pkginfo==1.5.0.1
+pluggy==0.13.0
+protobuf==3.0.0a3
+ptyprocess==0.6.0
+py==1.8.0
+pyaes==1.6.1
+pycodestyle==2.5.0
 pycparser==2.19
+pycryptodome==3.9.4
+pyflakes==2.1.1
 Pygments==2.4.2
+pyparsing==2.4.5
+pyrsistent==0.15.5
+pytest==5.2.4
+python-dateutil==2.8.1
 python-engineio==3.10.0
 python-socketio==4.3.1
+pywallet==0.1.0
+PyYAML==5.1.2
 readme-renderer==24.0
-requests==2.22.0
+requests==2.11.1
 requests-toolbelt==0.9.1
+sha256==0.1
 six==1.13.0
+tabulate==0.8.6
 tqdm==4.38.0
 twine==2.0.0
+two1==3.10.9
 urllib3==1.25.7
+wcwidth==0.1.7
 webencodings==0.5.1
 websocket-client==0.56.0
+zipp==0.6.0
